tests/sksl/errors/StaticSwitchTest.glsl
### Compilation failed:

error: 4: static switch has non-static test
    @switch (int(unknownInput)) {
             ^^^^^^^^^^^^^^^^^
1 error
